syntax = "proto3";

package uploads;

option go_package = "github.com/ziliscite/micro-comic/pkg/protobuf";

service UploadService {
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse);
  rpc DeleteImage(DeleteImageRequest) returns (Nothing);
}

message UploadImageRequest {
  oneof data {
    bytes chunk = 1;
    Metadata metadata = 2;
  };
}

message Metadata {
  string types = 1;
  string filename = 2;
}

message UploadImageResponse {
  string signed_url = 1;
}

message DeleteImageRequest {
  string signed_url = 1;
}

message Nothing {}
